<resources>
    <string name="app_name">TaskMasterApp</string>
    <string name="task_title">Task Title</string>
    <string name="user_name">user_name</string>
    <string name="task_detail_title">task_detail_title</string>
    <string name="alltasks">allTasks</string>
    <string name="mytasks">myTasks</string>
    <string name="setting">Setting</string>
    <string name="addtask">AddTask</string>
    <string name="task_status_details">Task_Status_details</string>
    <string name="task_Team_details">task_team_details</string>
    <string name="confirmationnumbertextview">confirmationNumberTextView</string>
    <string name="sign_out">sign out</string>
    <string name="upload_file">Upload File</string>
    <string name="task_image">taskImage</string>
    <string name="download_the_linked_file">Download</string>
    <string name="Location">Location</string>
    <string name="todo">todo</string>
    <string name="SubmitButtonForNewTask">SubmitButtonForNewTask</string>
    <string name="task_title_details">task_title_details</string>
    <string name="task_body_details">task_body_details</string>
    <string name="task_body">task_body</string>
    <string name="task_title_detail">task_title_detail</string>
    <string name="task_detail">task_detail</string>

    <string-array name="team_menu">
        <item>Team A</item>
        <item>Team B</item>
        <item>Team C</item>

    </string-array>

</resources>