<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetail">

    <ImageView
        android:id="@+id/taskImageDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/task_image"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_body" />

    <TextView
        android:id="@+id/fileLinkDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_the_linked_file"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:textColor="#FF03DAC5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleTaskTeam" />
    <TextView
        android:id="@+id/singleTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/task_detail_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/singleTaskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_status_details"
        app:layout_constraintBottom_toTopOf="@+id/task_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleTaskTitle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/task_body"
        android:layout_width="321dp"
        android:layout_height="72dp"
        android:layout_marginTop="68dp"
        android:text="There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleTaskTitle" />

    <TextView
        android:id="@+id/singleTaskTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/task_Team_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_body"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/Location"
            android:textSize="16sp" />

        <fragment
            android:layout_marginTop="10dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>